# AutoDevKit

./: .gitignore  README.md
cui_exec/: Cargo.toml
cui_exec/doc/: 仕様.md
cui_exec/src/: main.rs  settings.rs
gui_exec/doc/: 仕様.md
gui_exec/src/: main.py
notify/doc/: 仕様.md
notify/src/: main.py
remo_shell/: env_check.toml  remo_shell.toml
remo_shell/doc/: readme.md
