[package]
name = "cui_exec"
version = "0.1.0"
authors = ["adegh3ik2nos <adegh3ik2nos@gmail.com>"]
edition = "2018"
description = "cui execute automation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6.1"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
clap = "2.20.3"
